CSS e imagenes y cambios a html

--- a/veterinaria.html
+++ b/veterinaria.html
@@ -2,40 +2,46 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<title>Veterinaria</title>
 </head>
 <body>
-	<h1>Datos del Paciente</h1>
-	<h1>Administrar tus citas</h1>
-	<form action="#">
+	<div class="formulario">
+		<div class="contenedor">
+			<h1>Datos del Paciente</h1>
+			<h1>Administrar tus citas</h1>
+		
+		<form action="#">
 
-	<label for="nombredemascota">Nombre Mascota:</label>
-	<input type ="text" id="nombremascota" placeholder="Nombre Mascota" maxlength="10" name="nombreMascota">
-	<br />
+			<label for="nombredemascota">Nombre Mascota:</label>
+			<input type ="text" id="nombremascota" placeholder="Nombre Mascota" maxlength="10" name="nombreMascota">
+			<br />
 
 
-	<label for="propietario">Propietario:</label>
-	<input type ="text" id="propietario" placeholder="Propietario" maxlength="30" name="propietario">
-	<br />
+			<label for="propietario">Propietario:</label>
+			<input type ="text" id="propietario" placeholder="Propietario" maxlength="30" name="propietario">
+			<br />
 
-	<label for="telefono">Teléfono:</label>
-	<input type="tel" id="phone" placeholder="Número de Teléfono" maxlength="10" name="telefono">
-	<br />
+			<label for="telefono">Teléfono:</label>
+			<input type="tel" id="phone" placeholder="Número de Teléfono" maxlength="10" name="telefono">
+			<br />
 
-	<label for="fecha">Fecha:</label>
-	<input type="date" id="fecha" name="fecha" />
-	<br />
+			<label for="fecha">Fecha:</label>
+			<input type="date" id="fecha" name="fecha" />
+			<br />
 
-	<label for="hora">Hora:</label>
-	<input type="time" id="hora" name="hora" />
-	<br />
+			<label for="hora">Hora:</label>
+			<input type="time" id="hora" name="hora" />
+			<br />
 
-	<label for="sintomas">Síntomas:</label>
-	<br />
-	<textarea name="sintomas" id="sintomas" placeholder="Describa los síntomas"></textarea>
-		<br />
-	<br />
-	<button type="submit" href="#">Enviar</button>
-	</form>
+			<label for="sintomas">Síntomas:</label>
+			<br />
+			<textarea name="sintomas" id="sintomas" placeholder="Describa los síntomas"></textarea>
+				<br />
+			<br />
+			<button type="submit" href="#">Enviar</button>
+			</form>
+			</div>
+	</div>
 </body>
 </html>
