estilos anadidos y efectos

--- a/veterinaria.html
+++ b/veterinaria.html
@@ -9,29 +9,29 @@
 	<div class="formulario">
 		<div class="contenedor">
 			<h1>Datos del Paciente</h1>
-			<h1>Administrar tus citas</h1>
+			<h2>Administrar tus citas</h2>
 		
 		<form action="#">
 
 			<label for="nombredemascota">Nombre Mascota:</label>
-			<input type ="text" id="nombremascota" placeholder="Nombre Mascota" maxlength="10" name="nombreMascota">
+			<input type ="text" id="nombremascota" placeholder="Nombre Mascota" maxlength="10" name="nombreMascota" class="preguntas">
 			<br />
 
 
 			<label for="propietario">Propietario:</label>
-			<input type ="text" id="propietario" placeholder="Propietario" maxlength="30" name="propietario">
+			<input type ="text" id="propietario" placeholder="Propietario" maxlength="30" name="propietario" class="preguntas">
 			<br />
 
 			<label for="telefono">Teléfono:</label>
-			<input type="tel" id="phone" placeholder="Número de Teléfono" maxlength="10" name="telefono">
+			<input type="tel" id="phone" placeholder="Número de Teléfono" maxlength="10" name="telefono" class="preguntas">
 			<br />
 
 			<label for="fecha">Fecha:</label>
-			<input type="date" id="fecha" name="fecha" />
+			<input type="date" id="fecha" name="fecha" class="preguntas"/>
 			<br />
 
 			<label for="hora">Hora:</label>
-			<input type="time" id="hora" name="hora" />
+			<input type="time" id="hora" name="hora" class="preguntas"/>
 			<br />
 
 			<label for="sintomas">Síntomas:</label>
@@ -39,7 +39,7 @@
 			<textarea name="sintomas" id="sintomas" placeholder="Describa los síntomas"></textarea>
 				<br />
 			<br />
-			<button type="submit" href="#">Enviar</button>
+			<button type="submit" href="#" class="btn-Enviar">Enviar</button>
 			</form>
 			</div>
 	</div>
